--- a/src/Components/Calender/Calender.css
+++ b/src/Components/Calender/Calender.css
@@ -15,6 +15,7 @@
 	height: 45px;
 	margin: 10px 0;
 	text-align: center;
+	cursor: pointer;
 }
 
 .today {
@@ -26,4 +27,19 @@
 	text-align: center;
 	font-size: 23px;
 	color: rgb(44, 44, 44);
+}
+
+.closeBtn {
+	min-width: 100px;
+	padding: 10px 20px;
+	display: block;
+	margin: 0 auto;
+	background-color: #ee2c74;
+	outline: none;
+	border: none;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	border-radius: 50px;
+	cursor: pointer;
 }
