--- a/src/Components/SpecialCalender/SpecialCalender.css
+++ b/src/Components/SpecialCalender/SpecialCalender.css
@@ -1,3 +1,11 @@
+.special-calendar-day {
+	color: #4d4d4d;
+	height: 45px;
+	margin: 10px 0;
+	text-align: center;
+	cursor: unset;
+}
+
 .calenderHeader {
 	display: flex;
 	justify-content: space-between;
@@ -5,4 +13,8 @@
 	text-align: center;
 	font-size: 23px;
 	color: rgb(44, 44, 44);
+}
+.period-day {
+	background-color: #ee2c74;
+	color: white;
 }
